--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
             </div>
         </div>
     </section>
+    <!--Parallax section-->
+
     <section id="section-cards">
         <div class="container">
             <h2>Our <span class="bold-green">products</span></h2>
@@ -244,10 +246,182 @@
                 </div>
             </div>
         </div> <!-- end of container-->
-    </section>
+    </section> <!-- Products section -->
 
+    <section id="numbers">
+        <div class="section-numbers">
+            <div class="container">
+                <h2>The <span class="bold-green">numbers</span> don't lie</h2>
+                <p class="lead under-heading">Check out what our numbers tell about us</p>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <div class="num">
+                            <div class="num-content">
+                                <span class="counter">13,863</span>
+                                <p>Trees planted</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="num">
+                            <div class="num-content">
+                                <span class="counter">6,263</span>
+                                <p>Customers served</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="num">
+                            <div class="num-content">
+                                <span class="counter">2,866</span>
+                                <p>Products sold</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="num">
+                            <div class="num-content">
+                                <span class="counter">1,562</span>
+                                <p>Tons recycled</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> <!-- Numbers section -->
 
+    <section id="testimonials">
+        <div class="section-testimonials">
+            <div class="container">
+                <h2>Clients' <span class="bold-green">tesimonials</span></h2>
+                <p class="lead under-heading">Read what others say about our services.</p>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="row testimonial">
+                            <div class="col-sm-4">
+                                <img src="img/mario.png" class="mario-img">
+                            </div>
+                            <div class="col-sm-8">
+                                <blockquote>
+                                    <i class="fa fa-quote-right"></i>Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Saepe aut assumenda velit quas impedit sequi illum iste eos voluptatibus
+                                    provident.
+                                    <hr class="testimonials-hr">
+                                    <cite>&#8212; Mario, successful tree planter</cite>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="row testimonial">
+                            <div class="col-sm-4">
+                                <img src="img/monice.png" class="monice-img">
+                            </div>
+                            <div class="col-sm-8">
+                                <blockquote>
+                                    <i class="fa fa-quote-right"></i>Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Saepe aut assumenda velit quas impedit sequi illum iste eos voluptatibus
+                                    provident.
+                                    <hr class="testimonials-hr">
+                                    <cite>&#8212; Rebecca, successful tree planter</cite>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="row testimonial">
+                            <div class="col-sm-4">
+                                <img src="img/monka.png" class="monka-img">
+                            </div>
+                            <div class="col-sm-8">
+                                <blockquote>
+                                    <i class="fa fa-quote-right"></i>Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Saepe aut assumenda velit quas impedit sequi illum iste eos voluptatibus
+                                    provident.
+                                    <hr class="testimonials-hr">
+                                    <cite>&#8212; Ashley, successful tree planter</cite>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> <!-- Testimonials section -->
 
+    <section id="contact">
+        <div class="section-contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 mx-auto">
+                        <h2>Leave us a <span class="bold-green">message</span>!</h2>
+                        <form class="form-horizontal" role="form" method="post" action="index.php">
+                            <div class="form-group">
+                                <label for="name" class="col-sm-2 control-label">Name</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="name" name="name"
+                                        placeholder="First & Last Name" value="">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="email" class="col-sm-2 control-label">Email</label>
+                                <div class="col-sm-10">
+                                    <input type="email" class="form-control" id="email" name="email"
+                                        placeholder="example@domain.com" value="">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="message" class="col-sm-2 control-label">Message</label>
+                                <div class="col-sm-10">
+                                    <textarea class="form-control" row="4" name="message"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="human" name="human"
+                                        placeholder="Your Anaswer">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-8 mx-auto">
+                                    <input id="submit" name="submit" type="submit" value="Send the raven!"
+                                        class="btn btn-success">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-10 mx-auto">
+                                    <!--Will be used to display an alert to the user>-->
+                                </div>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> <!-- Contact section -->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <p>Copyright &copy; Aleksandar</p>
+                </div>
+                <div class="col-sm-4">
+                    <ul class="social-links">
+                        <li><a href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 scroll-to-top-button">
+                    <a href="#cover"><i class="fa fa-3x fa-chevron-circle-up"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- Optional JavaScript -->
