--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://kit.fontawesome.com/33847413cd.js" crossorigin="anonymous"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>First website</title>
+    <title>ONETREE | Home page</title>
 </head>
 
 <body>
@@ -202,7 +202,7 @@
             <h2>Our <span class="bold-green">products</span></h2>
             <p class="lead under-heading">See what we're capable of doing</p>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="card">
                         <div class="card-block">
                             <h4 class="card-title">Hiking &amp; Sightseeing</h4>
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="card">
                         <div class="card-block">
                             <h4 class="card-title">Hiking &amp; Sightseeing</h4>
@@ -230,7 +230,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-lg-4 col-md-6 mx-auto">
                     <div class="card">
                         <div class="card-block">
                             <h4 class="card-title">Hiking &amp; Sightseeing</h4>
@@ -254,7 +254,7 @@
                 <h2>The <span class="bold-green">numbers</span> don't lie</h2>
                 <p class="lead under-heading">Check out what our numbers tell about us</p>
                 <div class="row">
-                    <div class="col-sm-3">
+                    <div class="col-md-3 col-sm-6 mx-auto">
                         <div class="num">
                             <div class="num-content">
                                 <span class="counter">13,863</span>
@@ -262,7 +262,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-md-3 col-sm-6 mx-auto">
                         <div class="num">
                             <div class="num-content">
                                 <span class="counter">6,263</span>
@@ -270,7 +270,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-md-3 col-sm-6 mx-auto">
                         <div class="num">
                             <div class="num-content">
                                 <span class="counter">2,866</span>
@@ -278,7 +278,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-md-3 col-sm-6 mx-auto">
                         <div class="num">
                             <div class="num-content">
                                 <span class="counter">1,562</span>
@@ -297,12 +297,12 @@
                 <h2>Clients' <span class="bold-green">tesimonials</span></h2>
                 <p class="lead under-heading">Read what others say about our services.</p>
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-md-4">
                         <div class="row testimonial">
-                            <div class="col-sm-4">
+                            <div class="col-lg-4">
                                 <img src="img/mario.png" class="mario-img">
                             </div>
-                            <div class="col-sm-8">
+                            <div class="col-lg-8">
                                 <blockquote>
                                     <i class="fa fa-quote-right"></i>Lorem ipsum dolor sit amet, consectetur adipisicing
                                     elit. Saepe aut assumenda velit quas impedit sequi illum iste eos voluptatibus
@@ -313,12 +313,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-md-4">
                         <div class="row testimonial">
-                            <div class="col-sm-4">
+                            <div class="col-lg-4">
                                 <img src="img/monice.png" class="monice-img">
                             </div>
-                            <div class="col-sm-8">
+                            <div class="col-lg-8">
                                 <blockquote>
                                     <i class="fa fa-quote-right"></i>Lorem ipsum dolor sit amet, consectetur adipisicing
                                     elit. Saepe aut assumenda velit quas impedit sequi illum iste eos voluptatibus
@@ -329,12 +329,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-md-4">
                         <div class="row testimonial">
-                            <div class="col-sm-4">
+                            <div class="col-lg-4">
                                 <img src="img/monka.png" class="monka-img">
                             </div>
-                            <div class="col-sm-8">
+                            <div class="col-lg-8">
                                 <blockquote>
                                     <i class="fa fa-quote-right"></i>Lorem ipsum dolor sit amet, consectetur adipisicing
                                     elit. Saepe aut assumenda velit quas impedit sequi illum iste eos voluptatibus
@@ -404,12 +404,12 @@
     </section> <!-- Contact section -->
 
     <footer class="footer">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 mx-auto">
                     <p>Copyright &copy; Aleksandar</p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 mx-auto">
                     <ul class="social-links">
                         <li><a href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
