--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="cover">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-lg-3">
                     <p class="lead wall-sticker">
                         we. <br>
                         plant. <br>
@@ -36,11 +36,11 @@
                                 more</button></a>
                     </p>
                 </div>
-                <div class="col-sm-9">
+                <div class="col-lg-9 d-none d-lg-block">
                     <h1 class="moto">For <span class="bold-green">every</span> item sold, we plant 1 tree. <br><br> Want
                         to become a <span class="green-underline">part</span> of it?</h1>
-                    <a href="#section-cards"><i class="fa fa-arrow-down"></i></a>
                 </div>
+                <a href="#section-cards"><i class="fa fa-arrow-down"></i></a>
             </div>
         </div>
     </section>
@@ -87,27 +87,27 @@
     <section id="features">
         <div class="section-features">
             <div class="container">
-                <h2 class="under-heading">What <span class="bold-green">we</span> do?</h2>
-                <p class="lead under-heading">Take a look of what we do as a company</p>
+                <h2 class="under-heading js-wp-1">What <span class="bold-green">we</span> do?</h2>
+                <p class="lead under-heading js-wp-1">Take a look of what we do as a company</p>
 
 
                 <div class="row">
-                    <div class="col-sm-3 square">
+                    <div class="col-sm-3 square js-wp-2">
                         <i class="fa fa-tree fa-5x"></i>
                         <hr class="green-hr">
                         <p>We actually planted this damn tree a long time ago and didn't do anything since than</p>
                     </div>
-                    <div class="col-sm-3 square">
+                    <div class="col-sm-3 square js-wp-4">
                         <i class="fa fa-leaf fa-5x"></i>
                         <hr class="green-hr">
                         <p>This is another icon to make belive us that we're actually doing something</p>
                     </div>
-                    <div class="col-sm-3 square">
+                    <div class="col-sm-3 square js-wp-4">
                         <i class="fa fa-pagelines fa-5x"></i>
                         <hr class="green-hr">
                         <p>Yet another icon to prepresent the company</p>
                     </div>
-                    <div class="col-sm-3 square">
+                    <div class="col-sm-3 square js-wp-3">
                         <i class="fa fa-recycle fa-5x"></i>
                         <hr class="green-hr">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique tempora adipisci
@@ -126,7 +126,7 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-badge">2016</div>
-                        <div class="timeline-panel">
+                        <div class="timeline-panel js-wp-5">
                             <div class="timeline-heading">
                                 <h4 class="timeline-title">100,000 trees <span class="green-underline">planted</span>
                                 </h4>
@@ -145,7 +145,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-badge">2015</div>
-                        <div class="timeline-panel">
+                        <div class="timeline-panel js-wp-6">
                             <div class="timeline-heading">
                                 <h4 class="timeline-title">First <span class="green-underline">55,031</span> plants
                                     bought</h4>
@@ -164,7 +164,7 @@
                     </li>
                     <li>
                         <div class="timeline-badge">2014</div>
-                        <div class="timeline-panel">
+                        <div class="timeline-panel js-wp-7">
                             <div class="timeline-heading">
                                 <h4 class="timeline-title">Company <span class="green-underline">founded</span></h4>
                                 <p><small class="text-muted"><i class="fa fa-clock-o"></i>20 hours ago via
@@ -190,7 +190,7 @@
             <div class="row">
                 <div class="col-sm-8 mx-auto">
                     <h2>Are you ready to be part of the <strong>story</strong>?</h2>
-                    <p><a href="#" class="btn btn-success btn-lg btn-block parallax-btn">Yes, please!</a></p>
+                    <p><a href="#contact" class="btn btn-success btn-lg btn-block parallax-btn">Yes, please!</a></p>
                 </div>
             </div>
         </div>
@@ -435,6 +435,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
